Updated/Added simply-static-1-1671776173

--- a/life-style/62078/index.html
+++ b/life-style/62078/index.html
@@ -2284,14 +2284,7 @@ handleSearchBox();</script>
         <div class="data-title">Embedded Gallery 1</div>
 
         <div class="data-thumbnails" data-type="object">
-            <div class="data-default" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/zodiac-pisces-150x150.jpg"></div>
-<div class="data-instagram" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/instagram-1x-150x150.png"></div>
-<div class="data-youtube" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/youtube-1x-150x150.png"></div>
-<div class="data-pinterest" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/pinterest-1x-150x150.png"></div>
-<div class="data-twitter" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/twitter-1x-150x150.png"></div>
-<div class="data-brightcove" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/brightcove-1x-150x150.png"></div>
-<div class="data-facebook" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/fb-1x-150x150.png"></div>
-<div class="data-linkedin" data-value="https://uw-media.sphmagazines.com.sg/public/2019/07/linkedin-1x-150x150.png"></div>        </div>
+                    </div>
         <div class="data-items" data-type="array">
                             <div class="data-item">
                     <div class="data-targetUrl"></div>
