Updated/Added simply-static-1-1671776965

--- a/gallery/test-testes-tes/index.html
+++ b/gallery/test-testes-tes/index.html
@@ -1549,7 +1549,7 @@ document.addEventListener('visibilitychange', function (event) {
 								<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 				<link rel="preload" as="style" href="//fonts.googleapis.com/css?family=Open+Sans&display=swap">
 				<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans&display=swap" media="all">
-				<!--Start GS Tag request--><script type="text/javascript">sphm_gs_send_request(62937, "update");</script><!--End GS Tag request--><!--GS Tagging--><script type="text/javascript">var sphm_gs_src_url = "";var googletag = googletag || {cmd:[]};googletag.cmd.push(function() { googletag.pubads().setTargeting("gs_channels", ["no_category"]); });</script><!--END GS Tagging-->                <style>div[id*='ajaxsearchlitesettings'].searchsettings .asl_option_inner label {
+				<!--GS Tagging--><script type="text/javascript">var sphm_gs_src_url = "";var googletag = googletag || {cmd:[]};googletag.cmd.push(function() { googletag.pubads().setTargeting("gs_channels", ["gx_blocked"]); });</script><!--END GS Tagging-->                <style>div[id*='ajaxsearchlitesettings'].searchsettings .asl_option_inner label {
 						font-size: 0px !important;
 						color: rgba(0, 0, 0, 0);
 					}
