--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -2150,7 +2150,7 @@ handleSearchBox();</script>
         </div>
         <div class="detail">
             <a class="cat" href="/accessories/">Accessories</a>
-            <a class="title" href="/accessories/test-est/">test est</a>
+            <a class="title" href="/accessories/test-est/">test est2</a>
         </div>
     </div>
 
